# django-chat

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
chat/: asgi.py  settings.py  urls.py
core/: consumers.py  forms.py  models.py  routing.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/static/js/: plugins.js
core/templates/: base.html  login.html  register.html  room.html
fixture/: test_case.json
