[tool.poetry]
name = "django-chat"
version = "0.1.0"
description = "Приложение, которое позволяет пользователю войти в чат-комнату под выбранным никнеймом, просматривать историю сообщений, получать новые сообщения и отправлять сообщения"
authors = ["azat715@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
channels = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
