[tool.poetry]
name = "django-chat"
version = "0.1.0"
description = "Приложение, которое позволяет пользователю войти в чат-комнату под выбранным никнеймом, просматривать историю сообщений, получать новые сообщения и отправлять сообщения"
authors = ["azat715@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
channels = "^3.0.3"
channels-redis = "^3.2.0"
pylint = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pylint = "^2.8.3"
pylint-django = "^2.4.4"
pytest = "^6.2.4"
isort = "^5.9.1"
ipython = "^7.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
